Thu Feb 13 09:58:12 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* ruby.c (ruby_init_loadpath): ensures buffer terminated
	  before use strncpy().

	* ruby.c (proc_options): avoid SEGV at -S with no arguments.
	  (ruby-bugs-ja:PR#391)

Sat Feb  8 04:04:13 2003  Akinori MUSHA  <knu@iDaemons.org>

	* lib/irb/context.rb, lib/irb/multi-irb.rb, lib/irb/workspace.rb,
	  lib/irb/lc/error.rb, lib/irb/lc/help-message,
	  lib/irb/lc/ja/error.rb, lib/shell/command-processor.rb,
	  lib/shell/error.rb, lib/shell/filter.rb: Fix typos and
	  grammos. [approved by: keiju]

Mon Feb  3 23:46:48 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_getline): should not increment lineno at EOF.

Mon Jan 27 03:29:17 2003  NAKAMURA Usaku <usa@ruby-lang.org>

	* error.c (get_syserror): use snprintf() instead of sprintf(). pointed
	  out by knu.

Mon Jan 27 02:07:27 2003  NAKAMURA Usaku <usa@ruby-lang.org>

	* error.c (get_syserror): some Windows' errno have 5 digits. pointed
	  out by znz.

Wed Jan 22 14:22:53 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* error.c (set_syserr): should preserve duplicated error names.

Sun Jan 19 23:12:21 2003  Akinori MUSHA  <knu@iDaemons.org>

	* lib/shellwords.rb (shellwords): A backslash ('\') in single
	  quotes should not be regarded as meta character.  This bug or
	  maybe feature was inherited from Perl's shellwords.pl.

Fri Jan 17 03:33:42 2003  Akinori MUSHA  <knu@iDaemons.org>

	* sprintf.c (rb_f_sprintf): Fix a bug caused by an uninitialized
	  variable v, that a bignum unexpectedly gets converted into a
	  string with its higher figures all filled with ./f/7/1,
	  depending on the base.  This bug seems to have been introduced
	  in rev.1.11.2.4, before the 1.6.8 release.

	* sprintf.c (rb_f_sprintf): Use switch instead of a sequence of
	  else-if's.

Tue Jan 14 21:47:56 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* eval.c (rb_f_require): do not search adding .rb/.so suffixes if